# Lattice-engine

./: AGENTS.MD  API_DOCUMENTATION.md  LATTICE_ENGINE_USER_DOCUMENTATION.md  R001.MD  R002.MD  README.md  ROO3.MD  requirements.txt
.github/workflows/: cli-node.yml
.lattice/: config.json
.lattice/audit/: log.json
.lattice/policies/: agent_rules.json
.lattice/specs/: lattice-backend-apis.json  lattice-engine-cli.json
.lattice_spec_templates/: package.json
.lattice_spec_templates/.droid/: config.json
.lattice_spec_templates/.lattice/: lattice.config.json
bugsage-backend/: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
bugsage-backend/alembic/: env.py
bugsage-backend/alembic/versions/: 001_initial_migration.py
bugsage-backend/app/: __init__.py  config.py  main.py
bugsage-backend/app/ai/: __init__.py  agent_manager.py  models.py  service.py
bugsage-backend/app/ai/agents/: base.py  error_analysis_agent.py
bugsage-backend/app/ai/models/: config.py
bugsage-backend/app/ai/prompts/: error_analysis.py
bugsage-backend/app/api/: __init__.py
bugsage-backend/app/api/v1/: __init__.py  api.py  router.py
bugsage-backend/app/api/v1/endpoints/: errors.py  fixes.py  health.py  projects.py  users.py
bugsage-backend/app/database/: connection.py
bugsage-backend/app/models/: __init__.py  base.py  error.py  fix.py  organization.py  project.py  user.py
bugsage-backend/app/routers/: ai.py
bugsage-backend/app/schemas/: __init__.py  base.py  error.py  fix.py  user.py
bugsage-backend/app/services/: error_service.py  fix_service.py  ml_service.py  project_service.py  user_service.py
bugsage-backend/app/utils/: logger.py
bugsage-backend/scripts/: init-db.sql
bugsage-backend/tests/: conftest.py
bugsage-backend/tests/test_api/: test_llm_config.py  test_llm_service.py
bugsage-website/: README.md  package-lock.json  package.json  prompt.md
bugsage-website/docs/: docs.md  integration.md
cli/: README.md
cli/node-cli/: README.md  lattice-cli-node-0.1.0.tgz  package.json
cli/python-cli/: README.md  pyproject.toml
cli/python-cli/src/lattice_py/: __main__.py
cli/python-cli/src/lattice_py.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
cli/shared/: README.md  config.json
docs/: INTERNAL_LINKS_AUDIT.md  api-documentation.md  authentication-and-rbac.md  changelog.md  cli-configuration.md  cli-usage.md  comprehensive-prompt.md  engine-documentation.md  enhanced-website-specification.md  frontend-context.md  lattice-engine-api-reference.md  lattice-mutation-engine-dashboard-documentation.md  lattice-portal-feature-specifications.md  lattice-portal-implementation-guide.md  lattice-portal-integration-guide.md  lattice-portal-specifications.md  marketing-website-prompt.md  mcp-sdk-guide.md  mcp-servers.md  migration-examples.md  migration-guide.md  tutorials-and-guides.md  vscode-extension-guide.md  vscode-extension.md
lattice-portal/: package-lock.json  package.json
lattice-website/: AGENTS.md  README.md  cleanup-duplicate-routes.js  package-lock.json  package.json
lattice-website/prisma/: schema.prisma
lattice-website/prompts/: design.md  docs.md  docs.mp  missing_pages.md  starndad.md
lattice-website/public/: robots.txt  sitemap.xml
lattice_mutation_engine/: .gitignore  Dockerfile  RAILWAY_DEPLOYMENT.md  README_ENV.md  STARTUP_GUIDE.md  fix_imports.py  main.py  minimal_requirements.txt  railway.json  remote_diagnostic.py  requirements.txt  run.py  safe_imports.py  test_config.py  test_env_urls.py  test_imports.py  test_queue_fix.py
lattice_mutation_engine/agents/: agent_factory.py  base_agent.py  orchestrator.py  pydantic_base_agent.py  pydantic_conflict_agent.py  pydantic_dependency_agent.py  pydantic_impact_agent.py  pydantic_mutation_agent.py  pydantic_semantic_agent.py  pydantic_validator_agent.py  validator_agent.py
lattice_mutation_engine/api/: __init__.py  deployment_endpoints.py  endpoints.py  graph_endpoints.py  mcp_endpoints.py  spec_endpoints.py  spec_sync_endpoints.py  task_endpoints.py
lattice_mutation_engine/approval/: approval_manager.py  websocket_hub.py
lattice_mutation_engine/auth/: __init__.py  middleware.py
lattice_mutation_engine/celery_queue/: __init__.py
lattice_mutation_engine/config/: __init__.py  qdrant_setup.py  settings.py
lattice_mutation_engine/graph/: neo4j_repository.py  qdrant_semantic_index.py  repository.py  semantic_index.py  semantic_index_factory.py
lattice_mutation_engine/models/: api_key_models.py  approval_models.py  deployment_models.py  mcp_models.py  project_models.py  subscription_models.py  task_models.py  user_models.py
lattice_mutation_engine/mutations/: store.py
lattice_mutation_engine/observability/: __init__.py  metrics.py
lattice_mutation_engine/queue/: celery_app.py  tasks.py
lattice_mutation_engine/spec_sync/: daemon.py
lattice_mutation_engine/src/: main.py
lattice_mutation_engine/tasks/: __init__.py  manager.py
lattice_mutation_engine/utils/: claude_test.py  errors.py  qdrant_test.py
lattice_mutation_engine/validation/: __init__.py  business_rules_validator.py  comprehensive_validator.py  dependency_validator.py  schema_validator.py  semantic_validator.py  validation_rules.py
mcp-sdk/: CONTRIBUTING.md  LICENSE  auth.py  client.py  exceptions.py  models.py
mcp-sdk/nodejs-sdk/: .gitignore  README.md  package.json
mcp-sdk/python-sdk/: README.md  __init__.py
mcp-server/: .gitignore  Dockerfile  README.md  README_ENV.md  docker-compose.yml  jest.config.js  package-lock.json  package.json  prompt.md  tsconfig.json
mcp-server/scripts/: deploy.sh  start.sh  stop.sh
prompts/: prompt.md  system.md
roadmap/: detailed.md  outstanding.md
suggestions/: agent-mcp-enhancements.md  agentic-coding-enhancements.md  edge-computing-analysis.md  enterprise-scale-analysis.md  hybrid-deployment-strategy.md  openspec-integration.md  platform-agent-hosting-analysis.md  rdgr_implementation_plan.md
vscode-extension/: .vscodeignore  CHANGELOG.md  README.md  package.json
(+359 files in other folders)
