[project]
name = "lattice-py"
version = "0.1.0"
description = "Lattice CLI (Python) for interacting with the Lattice Engine backend"
requires-python = ">=3.9"
dependencies = ["requests>=2.31"]

[project.scripts]
lattice-py = "lattice_py.__main__:main"

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]