[project]
name = "lattice-py"
version = "0.1.0"
description = "Lattice CLI (Python) - Lightweight command-line interface for managing Lattice Engine resources, specs, and deployments"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Lattice Engine Team", email = "team@lattice.engine"}
]
maintainers = [
    {name = "Lattice Engine Team", email = "team@lattice.engine"}
]
keywords = [
    "lattice",
    "cli",
    "api-management",
    "deployment",
    "specification",
    "mutation",
    "devops",
    "infrastructure",
    "python"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities"
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "urllib3>=1.26.0"
]

[project.urls]
Homepage = "https://github.com/lattice-engine/lattice/tree/main/cli/python-cli"
Repository = "https://github.com/lattice-engine/lattice.git"
Issues = "https://github.com/lattice-engine/lattice/issues"
Documentation = "https://github.com/lattice-engine/lattice/tree/main/cli/python-cli#readme"

[project.scripts]
lattice-py = "lattice_py.__main__:main"

[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md"]